updated touch p5js demo

--- a/examples/Experiments/P5JSEarth/index.html
+++ b/examples/Experiments/P5JSEarth/index.html
@@ -5,7 +5,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-    <!--<script language="javascript" type="text/javascript" src="libraries/socket.io.js"></script>-->
+  <script language="javascript" type="text/javascript" src="libraries/socket.io.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.easycam.min.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
