--- a/examples/Experiments/DemoMultitouchP5js/demo/index.html
+++ b/examples/Experiments/DemoMultitouchP5js/demo/index.html
@@ -4,6 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+
+  <script language="javascript" type="text/javascript" src="libraries/tritra.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="demo.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
